# algorithms

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: test.yml
algebra/: elliptic_curve.cpp  elliptic_curve.hpp  finite_field.hpp  galois_field.hpp  polynomial_primality.hpp  test.cpp  tonelli_shanks.hpp
dynamic/: backpack_problem.cpp  backpack_problem.hpp  test.cpp
geometry/: convex_hull.cpp  convex_hull.hpp  convex_polygon_area.cpp  max_plus.cpp  max_plus.hpp  test.cpp
graph/: bellman_ford.cpp  bellman_ford.hpp  bipartite.hpp  connected_components.hpp  dijkstra.cpp  dijkstra.hpp  dwyer.hpp  edmonds_karp.cpp  edmonds_karp.hpp  floyd_warshall.hpp  johnson.hpp  push_relabel.hpp  topological_sort.hpp  tree_from_traverses.hpp  tree_hashing.cpp  tree_hashing.hpp  turbo_matching.hpp
graphs/: bellman_ford.cpp  bipartite.cpp  dwyer.cpp  edmonds_karp.cpp  floyd_warshall.cpp  push_relabel.cpp  test.cpp  topological_sort.cpp  tree_from_traverses.cpp  tree_hashing.cpp  turbo_matching.cpp
matrix/: decompositions.hpp  eigenvalues.hpp  gram_schmidt.hpp  system_solver.hpp  test.cpp
number/: chinese_remainder_theorem.hpp  discrete_log.hpp  fast_division.hpp  gcd.hpp  miller_rabin.hpp  power.hpp  reverse_polish_notation.hpp  sat.hpp  simplex.hpp  ternary_search.hpp
numbers/: chinese_remainder_theorem.hpp  discrete_log.hpp  equation_solver.cpp  equation_solver.hpp  fast_division.hpp  gcd.cpp  gcd.hpp  miller_rabin.cpp  miller_rabin.hpp  power.cpp  power.hpp  reverse_polish_notation.cpp  reverse_polish_notation.hpp  sat.cpp  sat.hpp  simplex.cpp  simplex.h  ternary_search.cpp  ternary_search.hpp  test.cpp
parallel/: README.md  bitonic_sort.cuh  connected_components.cuh  longest_common_subsequence.cuh  matrix_multiplication.cuh  position_sort.cuh  prefix_sum.cuh  shortest_path.cu
sorting/: bubble_sort.cpp  bubble_sort.hpp  find_kth.cpp  find_kth.hpp  five_sort.cpp  five_sort.hpp  insertion_sort.cpp  insertion_sort.hpp  merge_sort.cpp  merge_sort.hpp  quick_sort.cpp  quick_sort.hpp  selection_sort.cpp  selection_sort.hpp  test.cpp
structures/: double_linked_list.cpp  double_linked_list.h  double_linked_list.hpp  heap.cpp  heap.h  heap.hpp  interval_tree.cpp  interval_tree.h  interval_tree.hpp  unordered_map.cpp  unordered_map.h  unordered_map.hpp
tests/: CMakeLists.txt  algebra.cpp  dynamic.cpp  geometry.cpp  graph.cpp  matrix.cpp  number.cpp  sorting.cpp  text.cpp  texts.cpp
texts/: aho_corasick_tree.cpp  aho_corasick_tree.h  aho_corasick_tree.hpp  pref_suf.cpp  pref_suf.hpp  test.cpp
