cmake_minimum_required(VERSION 3.25)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithms_sorting sorting/test.cpp)
add_executable(algorithms_numbers numbers/test.cpp)
add_executable(algorithms_graphs graphs/test.cpp)
add_executable(algorithms_geometry geometry/test.cpp)
add_executable(algorithms_dynamic dynamic/test.cpp)
add_executable(algorithms_text texts/test.cpp)
add_executable(algorithms_matrix matrix/test.cpp)
add_executable(algorithms_algebra algebra/test.cpp)
add_executable(double_list structures/double_linked_list.cpp structures/double_linked_list.hpp)
add_executable(interval_tree structures/interval_tree.cpp structures/interval_tree.hpp)
add_executable(heap structures/heap.cpp structures/heap.hpp)
add_executable(simplex numbers/simplex.cpp numbers/simplex.hpp)
add_executable(unordered_map structures/unordered_map.cpp structures/unordered_map.hpp)
